--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wallet Balance</title>
+  <title>Wallet Balance and Transfer Volume</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
       <table>
         <thead>
           <tr>
-            <th>Token 1</th>
+            <th>Token</th>
             <th>Balance</th>
           </tr>
         </thead>
