--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wallet Balance and Transfer Volume</title>
+  <title>Prosley Test</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Wallet Balance</h1>
+    <h1>Wallet Balance & Transfer Volume</h1>
     <div class="search-container">
       <input type="text" id="wallet-input" placeholder="Enter your public key">
       <button id="search-btn">Search</button>
