Removed wallet volume transfer

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Wallet Balance & Transfer Volume</h1>
+    <h1>Check Your Wallet Balance:</h1>
     <div class="search-container">
       <input type="text" id="wallet-input" placeholder="Enter your public key">
       <button id="search-btn">Search</button>
@@ -36,7 +36,7 @@
           </tr>
         </tbody>
       </table>
-      <table>
+      <!-- <table>
         <thead>
           <tr>
             <th>Token</th>
@@ -57,7 +57,7 @@
             <td id="usdt-balance-2"></td>
           </tr>
         </tbody>
-      </table>
+      </table> -->
     </div>
   </div>
   <script src="script.js"></script>
